--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Akash-barsagadey/Blockchain-By-Building-Your-Own-In-JavaScript.git"
+  },
   "author": "Akash",
   "license": "ISC"
 }
