--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blockchain",
+  "name": "Blockchain-By-Building-Your-Own-In-JavaScript",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
